--- a/BurnWindow.html
+++ b/BurnWindow.html
@@ -34,20 +34,7 @@
                         <li><a href="MainFrame.html" class="current" target="_self">Home</a></li>
                         <li><a href="Metcondition.html" target="_blank">Meteorological and Air Quality condition</a></li>
                         <li><a href="FireEmission.html" target="_blank">Fire Emission</a></li>
-                        <!-- Dropdown Menu -->
-                        <li class="dropdown">
-                            <a href="#" class="dropbtn">Fire Radiative Energy</a>
-                            <div class="dropdown-content">
-                                <a href="NortheastChina.html">Northeast China</a>
-                                <a href="NorthwestChina.html">Northwest China</a>
-                                <a href="SouthwestChina.html">Southwest China</a>
-                                <a href="NorthChina.html">North China</a>
-                                <a href="CentralChina.html">Central China</a>
-                                <a href="EastChina.html">East China</a>
-                                <a href="SouthChina.html">South China</a>
-                            </div>
-                        </li>
-                        <!-- End Dropdown Menu -->
+                        <li><a href="NortheastChina.html" target="_blank">Fire radiative energy</a></li>
                         <li><a href="PAI.html" target="_blank">Prevention Alarming Index</a></li>
                         <li><a href="BurnWindow.html" target="_blank">Burn Window</a></li>
                         <li><a href="CropDistribution.html" target="_blank">Crop Residue Yield</a></li>
