--- a/BurnWindow.html
+++ b/BurnWindow.html
@@ -31,11 +31,11 @@
             <div class="container_header">
                 <nav>
                     <ul>
-                        <li><a href="MainFrame.html" class="current" target="_self">Home</a></li>
+                        <li><a href="index.html" class="current" target="_self">Home</a></li>
                         <li><a href="Metcondition.html" target="_blank">Meteorological and Air Quality condition</a></li>
                         <li><a href="FireEmission.html" target="_blank">Fire Emission</a></li>
                         <li><a href="NortheastChina.html" target="_blank">Fire radiative energy</a></li>
-                        <li><a href="PAI.html" target="_blank">Prevention Alarming Index</a></li>
+                        <li><a href="Preventionalarmingindex.html" target="_blank">Prevention Alarming Index</a></li>
                         <li><a href="BurnWindow.html" target="_blank">Burn Window</a></li>
                         <li><a href="CropDistribution.html" target="_blank">Crop Residue Yield</a></li>
                     </ul>
