--- a/CropDistribution.html
+++ b/CropDistribution.html
@@ -25,7 +25,7 @@
           <div class="container_header">
               <nav>
                 <ul>
-                  <li><a href="MainFrame.html" class="current" target="_self">Home</a></li>
+                  <li><a href="index.html" class="current" target="_self">Home</a></li>
                   <li><a href="Metcondition.html" target="_blank">Meteorological and Air Quality condition</a></li>
                   <li><a href="FireEmission.html" target="_blank">Fire Emission</a></li>
                   <li><a href="NortheastChina.html" target="_blank">Fire radiative energy</a></li>
