--- a/NortheastChina.html
+++ b/NortheastChina.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fire radiative energy</title>
     <link rel="shortcut icon" href="images/Prescribed.jpg" />
-    <meta name="application-name" content="东北三省秸秆计划烧除模拟预报管控平台">
-    <meta name="keywords" content="东北三省、卫星火点、计划烧除、燃烧窗口、空气质量、预报、平台">
-    <meta name="description"
-      content="东北三省秸秆计划烧除预报模拟平台是基于空气质量模型">
+    <meta name="application-name" content="Advanced Platform for Monitoring and Management of Agricultural Fire">
+    <meta name="description" content="Advanced Platform for Monitoring and Management of Agricultural Fire">
     <meta name="author" content="Guangyi Yang">
     <meta name="email" content="1050011755@qq.com">
     <meta name="copyright" content="版权所有，翻版必究。">
